# pyddd

./: .gitignore  Makefile  README  README.md  build.py  ddd.pxd  ddd.pyx  dddwrap.h  pyproject.toml  pyrightconfig.json  setup.py  test.py  test_ddd.py
test/: test.py
